fixed missing color

--- a/styles/backgroundstyle.css
+++ b/styles/backgroundstyle.css
@@ -52,7 +52,7 @@ h1{
     font-size: 16px;
 }
 .loginbox input:focus{
-    border-bottom: 1px solid #0cb0b6;
+    border-bottom: 1px solid #ffc701;
 }
 
 .loginbox button
@@ -89,6 +89,6 @@ h1{
 
 .loginbox a:hover
 {
-    color: #0cb0b6;
+    color: #ffc701;
 
 }
